# NJU-FLA-2023FALL-PROJ

./: CMakeLists.txt  README.html  README.md  automake.sh  pack.sh
programs/: a+b.tm  case1.tm  case2.tm  helloworld.tm
turing-project/: CMakeLists.txt  main.cpp
turing-project/ReadTMfile/: CMakeLists.txt  ReadTMfile.cpp  ReadTMfile.h
turing-project/TuringMachine/: CMakeLists.txt  TuringMachine.cpp  TuringMachine.h  TuringSubclass.cpp
